compiler/testData/diagnostics/tests/collectionLiterals/kt34515.fir.kt
fun main() {
    []<!UNNECESSARY_NOT_NULL_ASSERTION!>!!<!>!!
}